syntax = "proto3";

option go_package = "github.com/YukiOnishi1129/techpicks/platform";

package checkpicks.content.v1;

import "google/protobuf/wrappers.proto";

message Platform {
    string id = 1;
    string name = 2;
    string siteUrl = 3;
    int64 platformSiteType = 4;
    string faviconUrl = 5;
    bool isEng = 6;
    string createdAt = 7;
    string updatedAt = 8;
    google.protobuf.StringValue deletedAt = 9;
}